@@ -1195,6 +1195,9 @@ namespace RCT1
         MINIATURE_RAILWAY_TENDER = 15,
         MINIATURE_RAILWAY_LOCOMOTIVE = 16,
         MINIATURE_RAILWAY_CARRIAGE = 17,
+        WOODEN_RC_TRAIN_BACKWARDS = 20,
+        STEEL_RC_REVERSED_FRONT = 23,
+        STEEL_RC_REVERSED_CARRIAGE = 24,
         MINE_TRAIN_FRONT = 35,
         MINE_TRAIN_CARRIAGE = 36,
         CORKSCREW_RC_FRONT = 38,
